samples/_failures_safe/1761447344_673b14_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a0ad745.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_1a0ad745.c:141:9: error: expected declaration or statement at end of input
  141 |         lexer->column++;
      |         ^~~~~
./samples/SAFE/__tmp_1a0ad745.c:141:9: error: expected declaration or statement at end of input
